--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass assets/sass/main.scss assets/css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
     "compile-sass": "0.0.5"
   },
   "devDependencies": {
-    "node-sass": "^4.9.0",
-    "nodemon": "^1.17.4"
+    "node-sass": "^4.9.0"
   }
 }
